tests/parser/valid/statements/if_else.src
fn main() -> int {
    int x = 10;
    if (x > 0) {
        return 1;
    } else {
        return -1;
    }
}