tests/parser/invalid/syntax_errors/unclosed_block.src
fn main() {
    if (true) {
        return 1;